--- a/src/Styles/Components/_collapse.scss
+++ b/src/Styles/Components/_collapse.scss
@@ -1,14 +1,25 @@
 .collapse{
+    padding: 0px;
+    margin:0px;
+  
+padding:0px;
     .collapse-part {
         background-color: $mainColor;
-        border-radius: 20px;
-        padding: 5px;
+        border-radius: 10px;
+        padding: 0px;
+        padding-left: 10px;
+        padding-right: 10px;
         color: $color1;
-        max-width: 100%;
+    
         display: flex;
         align-items: center;
         justify-content: space-between;
-        
+
+        }
+    
+        h3{
+            font-size: 18px;
+        }
       
     
     
@@ -23,8 +34,15 @@
                 }
             
         }
-    }
-    @media(max-width:768px){
+        .collapse-content{
+            background-color: $color2;
+            background-color: $color2;
+            padding: 10px; // Ajoutez du padding si nécessaire
+            overflow: hidden; // Pour éviter le débordement
+            max-height: 0; // Démarrez avec une hauteur nulle
+            transition: max-height 0.3s ease; 
+
+        }
         
     }
-}
+
